added temporary lock disable to course 3

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 VITE_APP_API_URL=https://female-dynamics-api.onrender.com
 VITE_ADMIN_EMAIL=admin-email@gmail.com
+
+VITE_SUMIT_API_URL=https://demo-app.sumit.co.il
+VITE_SUMIT_BUSINESS_ID=123456789
+VITE_SUMIT_API_KEY="test-sumit-co-il-key"
