Updated .env example

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
-VITE_APP_API_URL=https://female-dynamics-api.onrender.com
-VITE_ADMIN_EMAIL=admin-email@gmail.com
+VITE_APP_API_URL=
+VITE_ADMIN_EMAIL=
 
-VITE_SUMIT_API_URL=https://demo-app.sumit.co.il
-VITE_SUMIT_BUSINESS_ID=123456789
-VITE_SUMIT_API_KEY="test-sumit-co-il-key"
+VITE_SUMIT_API_URL=
+VITE_SUMIT_BUSINESS_ID=
+VITE_SUMIT_API_KEY=
+
+VITE_LANDING_PAGE_URL=
+VITE_COURSE_APP_URL=
+
+VITE_BONUS_CONTENT_PAY_URL=
