--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.0",
     "react-icons": "^5.0.1",
     "react-player": "^2.15.1",
     "react-responsive": "^9.0.2",
